--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,9 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
-
+h2 {
+  padding-top: 50px;
+}
 ul {
 list-style-type: none;
 margin: 0;
@@ -34,4 +36,73 @@ text-decoration: none;
 
 li a:hover {
 background-color: #a96d44;
+}
+
+div {
+    text-align: justify;
+}
+
+
+div:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+
+
+/* Style the navbar */
+#navbar {
+  overflow: hidden;
+  z-index: 999999999;
+}
+
+/* Navbar links */
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+
+.video {
+  z-index: 0;
+}
+
+/* Page content */
+.content {
+  padding: -15px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
+
+.footer {
+  display: block;
+  color: #7d3b0e;
+  background-color: #ffae42;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
